--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="txtView_book_description_label">Descripcion:</string>
     <string name="txtView_book_photo_url_label">Imagen:</string>
     <string name="txtView_add_photoUrl_label">Imagen URL:</string>
-    <string name="btn_add_book_label">Añadir:</string>
+    <string name="btn_add_book_label">Añadir</string>
 </resources>
